--- a/Spring boot programs/SpringBootWithThymeleafDemo/SpringBootWithThymeleafDemo/src/main/resources/templates/index.html
+++ b/Spring boot programs/SpringBootWithThymeleafDemo/SpringBootWithThymeleafDemo/src/main/resources/templates/index.html
@@ -10,5 +10,6 @@
 	<p th:text="${name}"></p>
 	<h2>Employee Operation</h2>
 	<a href="displayEmployee">Display Employee</a> |
+	<a href="addEmployee">Add Employee</a>
 </body>
 </html>
