--- a/Spring boot programs/phase3demoapp/phase3demoapp/src/main/resources/templates/adminHome.html
+++ b/Spring boot programs/phase3demoapp/phase3demoapp/src/main/resources/templates/adminHome.html
@@ -10,5 +10,6 @@
 <a th:href="@{/addCategoryPage}">Add Category</a> |
 <a th:href="@{/viewCategoryPage}">View Category</a> |
 <a th:href="@{/addProductPage}">Add Product</a> |
+<a th:href="@{/}">Logout</a> |
 </body>
 </html>
