--- a/Spring boot programs/phase3demoapp/phase3demoapp/src/main/resources/templates/customerHome.html
+++ b/Spring boot programs/phase3demoapp/phase3demoapp/src/main/resources/templates/customerHome.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 	<h2>Welcomem to Customer Home Page</h2>
+	<a th:href="@{/viewProductDetailsByCustomer}">View Product</a> |
 </body>
 </html>
